# gazebo_sim

./: .gitignore  README.md  building_robot.sdf
gazebo_models/: combined_world.sdf  combined_world_gui.sdf  setup.sh
gazebo_models/ELM4_chassis/: model.sdf
gazebo_models/ionic_interior/: model.sdf
ros_ws/src/camera_snapshot_service/: CMakeLists.txt  package.xml
ros_ws/src/camera_snapshot_service/src/: camera_snapshot_service.cpp
ros_ws/src/camera_snapshot_service/srv/: TakeSnapshot.srv
ros_ws/src/camera_subscriber/: CMakeLists.txt  package.xml
ros_ws/src/camera_subscriber/src/: camera_subscriber_node.cpp
